# topot

./: .gitignore  CLAUDE.md  Makefile  README.md  USAGE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
src/topot/: __init__.py  cli.py
src/topot/data/mutff/amber99sb-star-ildn-mut.ff/: atomtypes.atp  ions.itp
src/topot/utils/: __init__.py  ff_detector.py  gro_parser.py  mutres_parser.py  processor.py  residue_classifier.py  topology_parser.py
tests/: test_cli.py
tests/A_ARG155ASH-A_ASP177ASH-A_LYS180ASP/: topol.top  topol_Protein_chain_A.itp  topol_Protein_chain_B.itp
tests/A_ARG155ASH-A_ASP177ASH-A_LYS180ASP/test_output/: index.ndx  md_lambda_0.gro  md_lambda_1.gro
tests/H_TRP33TYR/: genion.tpr  index.ndx  ions.mdp  md_mut.gro  newtop.top  pmx_topol_Protein_chain_B.itp  pmx_topol_Protein_chain_H.itp  pmx_topol_Protein_chain_L.itp  posre_Protein_chain_B.itp  posre_Protein_chain_H.itp  posre_Protein_chain_L.itp  topol.top  topol_Protein_chain_B.itp  topol_Protein_chain_H.itp  topol_Protein_chain_L.itp
tests/H_TRP33TYR/amber99sb-star-ildn-mut.ff/: ffnonbonded.itp
tests/H_TRP33TYR/quick_test/: index.ndx  md_lambda_0.gro  md_lambda_0_WI.gro  md_lambda_1.gro  md_lambda_1_WI.gro
tests/I_MET30LYS-I_LEU29ARG/: md.gro  pmx_topol_Protein_chain_B.itp  pmx_topol_Protein_chain_I.itp  posre_Protein_chain_B.itp  posre_Protein_chain_I.itp  topol.top  topol_Protein_chain_B.itp  topol_Protein_chain_I.itp
